[metadata]
name = energy-net-zoo
version = 0.0.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = A package for smart grid simulation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLAIR-LAB-TECHNION/EnergyNet
keywords = smart-grid
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    stable-baselines3
    wandb
    tensorboard
    energy_net @ git+https://github.com/CLAIR-LAB-TECHNION/energy-net@main 